--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - sudo apt-get install valgrind
 
 script:
-  - $(DC) -unittest -main -of./target/test source/vcr.d && valgrind --tool=none ./target/test
+  - ${DC} -unittest -main -of./target/test source/vcr.d && valgrind --tool=none ./target/test
