Drop ldc from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: d
 
 d:
   - dmd
-  - ldc
+#  - ldc  # this causes valgrind internal error, and gets segmentation fault.
 
 install:
   - |
